Lab 8 - Use current portal, removed classic portal
Lab 8 used the classic portal. That is not accessable anymore. So changed the tasks to use the current portal.

--- a/Instructions/Labs/dotnet/Mod08/20532C_LAB_08.md
+++ b/Instructions/Labs/dotnet/Mod08/20532C_LAB_08.md
@@ -58,32 +58,29 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Create the Service Bus namespace by using the Portal
 
-> **Note:** Service Bus functionality is not available yet in the Azure Portal. Because of this, the classic Portal will be used for this lab.
 
-1.  Sign in to the Classic Azure Portal
-    ([*https://manage.windowsazure.com*](https://manage.windowsazure.com)).
+
+1. Sign in to the Azure Portal (<https://portal.azure.com>).
 
 1. View the list of **Service Bus** namespaces for your subscription.
 
 1. Create a new **Service Bus** namespace by using the following values:
 
   - Namespace Name: **sb20532[Your Name]**
+  
+  - Pricing Tier: **Standard**
+  
+  - Resource Group: **20532**
 
-  - Region: **Select the region that is closest to you**
-
-  - Type: **Messaging**
-
-  - Messaging Tier: **Standard**
+  - Location: **Select the region that is closest to you**
 
   > **Note:** It takes approximately 1-2 minutes to create your Service Bus namespace instance.
 
-1. Note down the connection string for your newly created Service Bus namespace.
+1. Note down the connection string for your newly created Service Bus namespace. This can be found under **Shared access policies** 
 
 1. Create a new **queue** in your namespace by using the following details:
 
   - **Queue** **Name**: signin
-
-  - **Namespace**: sb20532[Your Name]
 
 > **Results:** After completing this exercise, you will have created a Service Bus namespace and queue by using the Portal.
 
