--- a/Instructions/Labs/dotnet/Mod08/20532C_LAB_AK_08.md
+++ b/Instructions/Labs/dotnet/Mod08/20532C_LAB_AK_08.md
@@ -6,11 +6,10 @@
 
 #### Task 1: Create the Service Bus namespace by using the Portal
 
-> **Note:** Service Bus functionality is not available yet in the new Portal. Because of this, the Classic Portal will be used for this lab.
 
 1. On the Start screen, click the **Internet Explorer** tile.
 
-1. Go to [*https://manage.windowsazure.com*](https://manage.windowsazure.com)
+1. Sign in to the Azure Portal (<https://portal.azure.com>).
 
 1. In the email address box, type the email address of your Microsoft account.
 
@@ -18,53 +17,47 @@
 
 1. Click **Sign In** In the navigation pane on the left side
 
-1. In the navigation pane on the left side of the screen, scroll down, and then click **Service Bus**.
+1.  In the navigation pane on the left side of the screen, scroll down, and then click **More Services**.
 
-1. At the bottom of the screen, click the **Create** button.
+1.  In the **Browse** blade that displays, click **Service Bus**.
 
-1. In the **Create a Namespace** dialog box, perform the following steps:
+1. At the top of the blad, click the **Add** button.
 
-  a. In the **Namespace Name** box, type **sb20532[*Your Name*]**.
+1. In the **Create Namespace** blad that displays, perform the following steps:
 
-  b. In the **Region** list, select the region that is closest to your location.
+  a. In the **Name** box, type **sb20532[*Your Name*]**.
 
-  c. In the **Type** list, select the **Messaging** option.
+  b. In the **Pricing Tier** list, select the **Standard** option.
 
-  d. In the **Messaging Tier** list, select the **Standard** option.
+  c. In the **Location** list, select the region that is closest to your location.
 
-  e. Click the check mark button to create your namespace.
+  d. Click the **Create** button to create your namespace.
 
   > **Note:** It takes approximately 1-2 minutes to create your Service Bus namespace instance.
 
 1. In the list of **Service Bus** namespaces, click the namespace that you just created.
 
-1. At the bottom of the screen, click **Connection Information**.
+1. In the blade that appears, click **Shared access policies**.
 
-1. Record the *RootManageSharedAccessKey* connection string from the **Access connection information** dialog box.
+1. Click the *RootManageSharedAccessKey*.
 
-  > **Note:** You must record a connection string from the list of SAS items.
+1. Record the *Primary Connections String* connection string from the **SAS Policy** blade.
 
-1. Close the **Access connection information** dialog box.
+  > **Note:** This connection string will be used in various parts of this lab.
 
-1. At the top of the screen, click the **Queues** tab.
+1. Close the **SAS Policy** blade.
 
-1. At the bottom-left corner of the screen, click **New**.
+1. At the left of the blade, click **Queues**.
 
-1. If it is not automatically selected, select **App Services > Service Bus > Queue > Custom Create**.
+1. At the top of the blade, click **Queue**.
 
-1. In the **Create a Queue** dialog box, perform the following steps:
+1. In the **Create Queue** dialog box, perform the following steps:
 
-  a. In the **Queue** **Name** box, type **signin**.
+  a. In the **Name** box, type **signin**.
 
-  b. In the **Region** list, select the same region that you selected for the namespace.
+  b. Leave all fields as their default values.
 
-  c. In the **Namespace** box, provide the value **sb20532[Your Name]**.
-
-  d. Click next arrow to move to the next step in the wizard.
-
-  e. Leave all fields as their default values.
-
-  f. Click the check mark button to create the new queue.
+  c. Click the check mark button to create the new queue.
 
 > **Results:** After completing this exercise, you will have created a Service Bus namespace and queue by using the Portal.
 
