--- a/Instructions/Labs/dotnet/Mod10/20532C_LAB_AK_10.md
+++ b/Instructions/Labs/dotnet/Mod10/20532C_LAB_AK_10.md
@@ -4,109 +4,99 @@
 
 ## Exercise 1: Creating an Azure AD
 
-#### Task 1: Sign in to the Azure Classic Portal
-
-> **Note:** For this lab, you will use the Classic Portal because the functionality to create new Azure Active Directory domains is not available in the Portal.
+#### Task 1: Sign in to the Azure Portal
 
 On the Start screen, click the **Internet Explorer** tile.
 
-Go to [*https://manage.windowsazure.com*](https://manage.windowsazure.com)
+Go to [*https://portal.azure.com*](https://portal.azure.com)
 
 Enter the email address and password for your Microsoft account, and then click **Sign In**.
 
 #### Task 2: Create an directory by using the Classic Portal
 
-1.  In the navigation pane on the left side of the screen, scroll down, and then click **Active Directory**.
+1.  In the navigation pane on the left side of the screen, click **+New** at the top of the blade.
 
-2.  Click the **Directory** tab at the top of the page.
+2.  Select **Azure ActiveDirectory** (you can use the search functionality).
 
-3.  At the bottom of the screen, click **+New**.
+3.  At the bottom of the screen, click **Create**.
 
-    a. Select **APP SERVICES**, **ACTIVE** **DIRECTORY**, **DIRECTORY**, and then click **CUSTOM** **CREATE**.
+    a. In the **Create Directory** blade, perform the following steps:
 
-    b. In the **Add Directory** dialog box, perform the following steps:
+    b. In the **Organization name** box, type **20532**.
 
-    c. In the **Directory** list, select **Create new directory**.
+    c. In the **Initial domain name** box, type **ad20532\[*Your Name*\]**.
 
-    d. In the **Name** box, type **20532**.
+	d. In the **Country or Region** list, select your current location.
 
-    e. In the **Domain Name** box, type **ad20532\[*Your Name*\]**.
-
-    f. In the **Country or Region** list, select your current location.
-
-    g. Click the check mark button to add the directory.
+    e. Record the full domainname below the **Initial domain name** box
+	
+    f. Click **Create**.
 
 #### Task 3: Create a Global Administrator role in the directory
 
-1.  In the list of directories, click the name of the directory **20532**.
+1.  On the top left of the screen, click on your account information.
 
-    > **Note:** You may be prompted with a popup dialog talking about Azure AD features. You can safely ignore this dialog by clicking the *checkmark* button to close it.
+2.  In the list of directories, click the name of the directory **20532**.
 
-2.  Click the **Users** tab at the top of the page.
+3.  In the navigation blade on the left, select **Azure Active Directory**.
 
-3.  At the bottom of the screen, click **Add User**.
+4.  Click **Add a User** in the **Quick tasks** section of the screen.
 
-4.  In the **Add user** dialog box, perform the following steps:
+6.  In the **User** blade, perform the following steps:
 
-    a. In the **Type of User** list, select **New user in your organization**.
+    a. In the **Name** box, type **Admin User**.
 
-    b. In the **User Name** box, type **admin**.
+    b. In the **User name** box, type **admin@ad20532[*Your Name*]**.onmicrosoft.com**.
 
-    c. In the **Domain** list, ensure that only your domain (**ad20532[*Your Name*]**) is selected.
+    c. Click on **Profile**.
 
-    d. Click the right arrow to move to the next step in the wizard.
+    d. In the **First Name** box, type **Admin**.
 
-    e. In the **First Name** box, type **Admin**.
+    e. In the **Last Name** box, type **User**.
 
-    f. In the **Last Name** box, type **User**.
+    f. Click on **Ok**.
+ 
+    g. Click on **Diretory role**.
 
-    g. In the **Display Name** box, type **Admin User**.
-
-    h. In the **Role** list, select **Global Admin**.
-
-    i. In the **Alternate Email Address** box, type **example@contoso.com**.
-
-    j. Ensure the **Enable Multi-Factor Authentication** check box is cleared.
-
-5.  Click the right arrow to move to the next step in the wizard.
-
-    a. On the **Get Temporary Password** screen, click **Create** to create the user.
-
-    b. Record the temporary password that is generated for the user.
-
-6.  Click the check mark button to complete the wizard.
+    h. In the **Directory Role** blade, select **Global Administrator**.
+	
+    i. Click on **Ok**.
+		
+	j. Check the **Show Password** checkbox.
+	
+	k. Copy and record the temporary password.
+	
+	l. Click on **Create**.
 
 #### Task 4: Create a User role in the directory
 
-1.  At the bottom of the screen, click **Add User**.
+1.  Click **Add a User** in the **Quick tasks** section of the screen.
 
-2.  In the **Add User** dialog box, perform the following steps:
+2.  In the **User** blade, perform the following steps:
 
-    a. In the **Type of User** list, select **New user in your organization**.
+    a. In the **Name** box, type **Standard User**.
 
-    b. In the **User Name** box, type **standard**.
+    b. In the **User name** box, type **user@ad20532[*Your Name*]**.onmicrosoft.com**.
 
-    c. In the **Domain** list, ensure that only your domain (**ad20532\[*Your Name*\]**) is selected.
+    c. Click on **Profile**.
 
-    d. Click the right arrow to move to the next step in the wizard.
+    d. In the **First Name** box, type **Standard**.
 
-    e. In the **First Name** box, type **Standard**.
+    e. In the **Last Name** box, type **User**.
 
-    f. In the **Last Name** box, type **User**.
+    f. Click on **Ok**.
+ 
+    g. Click on **Diretory role**.
 
-    g. In the **Display Name** box, type **Standard User**.
-
-    h. In the **Role** list, select **User**.
-
-    i. Ensure the **Enable Multi-Factor Authentication** check box is cleared.
-
-3.  Click the right arrow to move to the next step in the wizard.
-
-    a. On the **Get Temporary Password** screen, click **Create** to create the user.
-
-    b. Record the temporary password that is generated for the user.
-
-4.  Click the check mark button to complete the wizard.
+    h. In the **Directory Role** blade, select **User**.
+	
+    i. Click on **Ok**.
+		
+	j. Check the **Show Password** checkbox.
+	
+	k. Copy and record the temporary password.
+	
+	l. Click on **Create**.
 
 > **Results:** After completing this exercise, you will have created an Azure AD and populated the directory with users.
 
