last references to the classic portal removed
Minor text changes for using the current portal and not the classic portal

--- a/Instructions/Labs/dotnet/Mod10/20532C_LAB_AK_10.md
+++ b/Instructions/Labs/dotnet/Mod10/20532C_LAB_AK_10.md
@@ -6,13 +6,19 @@
 
 #### Task 1: Sign in to the Azure Portal
 
-On the Start screen, click the **Internet Explorer** tile.
+1.  On the Start screen, click the **Internet Explorer** tile.
 
-Go to [*https://portal.azure.com*](https://portal.azure.com)
+2.  Go to <https://portal.azure.com>
 
-Enter the email address and password for your Microsoft account, and then click **Sign In**.
+3.  Type the email address of your Microsoft account.
 
-#### Task 2: Create an directory by using the Classic Portal
+4.  Click **Continue**.
+
+5.  Type the password for your Microsoft account.
+
+6.  Click **Sign In**.
+
+#### Task 2: Create an directory
 
 1.  In the navigation pane on the left side of the screen, click **+New** at the top of the blade.
 
