--- a/Instructions/Labs/dotnet/Mod10/20532C_LAB_10.md
+++ b/Instructions/Labs/dotnet/Mod10/20532C_LAB_10.md
@@ -38,7 +38,7 @@ Before starting this lab, you must complete the lab in Module 2. For the lab in 
 
   -   Password: **AzurePa$$w0rd**
 
-5.  Verify that you received the credentials to sign in to the Azure Classic Portal from your training provider. You will use these credentials and the Azure account throughout the labs in this course.
+5.  Verify that you received the credentials to sign in to the Azure Portal from your training provider. You will use these credentials and the Azure account throughout the labs in this course.
 
 ## Exercise 1: Creating an Azure AD
 
@@ -64,7 +64,9 @@ The main tasks for this exercise are as follows:
 
 #### Task 1: Sign in to the Azure Portal
 
-#### Task 2: Create an directory by using the Classic Portal
+Sign in to the Azure Portal (<https://portal.azure.com>).
+
+#### Task 2: Create an directory
 
 1.  View the list of Active Directory directories for your subscription.
 
@@ -94,7 +96,7 @@ The main tasks for this exercise are as follows:
 
   - Role: **Global Administrator**
 
-  > **Note:** Make sure you record the temporary password that is generated when you create the new user. In case you forget, you can always reset the user’s password by using the **Reset Password** button that is next to the **Add User** button in the Classic Portal.
+  > **Note:** Make sure you record the temporary password that is generated.
 
 #### Task 4: Create a User role in the directory
 
@@ -110,7 +112,7 @@ The main tasks for this exercise are as follows:
 
   - Role: **User**
 
-  > **Note:** Make sure you record the temporary password that is generated when you create the new user. In case you forget, you can always reset the user’s password by using the **Reset Password** button that is next to the **Add User** button in the Classic Portal.
+  > **Note:** Make sure you record the temporary password that is generated.
 
 > **Results:** After completing this exercise, you will have created an Azure AD and populated the directory with users.
 
