--- a/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
+++ b/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
@@ -521,7 +521,7 @@
 
 8.  Wait for one or two minutes, and then refresh the sign-in sheet page.
 
-9.  Click **Sign-In Sheet** to download the sign-in sheet from the server by using the blob Url.
+9.  Click **Sign-In Sheet Hyperlink** to download the sign-in sheet from the server by using the blob Url.
 
 10. Close the **Internet Explorer** application.
 
